<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#0A0A0B"
    android:id="@+id/favorite_details_scroll"
tools:context=".FavoriteDetailsActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/release_date"
        android:textSize="16sp"
        android:textColor="#E6F0F1"
        app:layout_constraintStart_toStartOf="@+id/show_release_date"
        app:layout_constraintTop_toBottomOf="@+id/show_release_date" />

    <TextView
        android:id="@+id/moviePlot_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="16dp"
        android:hint="@string/synopsis"
        android:textColor="#E6F0F1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

    <TextView
        android:id="@+id/show_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="32dp"
        android:text="@string/rate"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/movie_title"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <TextView
        android:id="@+id/show_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/show_release_date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movie_rate"
        app:layout_constraintTop_toBottomOf="@+id/movie_rate" />
    <ImageView
        android:id="@+id/calender"
        android:src="@drawable/calender"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        app:layout_constraintStart_toStartOf="@+id/movie_release_date"
        app:layout_constraintBottom_toBottomOf="@id/movie_release_date"
        app:layout_constraintEnd_toEndOf="@id/movie_release_date"
        android:contentDescription="@string/this_is_the_movie_s_poster" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/overview"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

    <TextView
        android:id="@+id/movie_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/rating"
        android:textSize="16sp"
        android:textColor="#E6F0F1"
        app:layout_constraintStart_toStartOf="@+id/show_rating"
        app:layout_constraintTop_toBottomOf="@+id/show_rating" />

    <ImageView
        android:id="@+id/star"
        android:src="@drawable/star"
        android:layout_marginTop="8dp"
        android:layout_marginStart="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/movie_rate"
        app:layout_constraintBottom_toBottomOf="@id/movie_rate"
        app:layout_constraintEnd_toEndOf="@id/movie_rate"
        android:contentDescription="@string/rating_star" />

    <ImageView
        android:id="@+id/movie_trailers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trailer"
        app:layout_constraintTop_toBottomOf="@+id/moviePlot_synopsis"
        android:contentDescription="@string/play_trailer" />

    <TextView
        android:id="@+id/label_trailers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/trailers"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/movie_trailers"
        app:layout_constraintTop_toBottomOf="@+id/moviePlot_synopsis" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_trailers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_trailers" />

    <TextView
        android:id="@+id/trailer_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/trailer_error_message"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_trailers"
        android:visibility="invisible" />


    <ImageView
        android:id="@+id/people_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/review"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_trailers"
        android:contentDescription="@string/see_review" />

    <TextView
        android:id="@+id/label_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text= "@string/reviews"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/people_reviews"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_trailers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_reviews" />

    <TextView
        android:id="@+id/review_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/review_error_message"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_reviews"
        android:visibility="invisible" />

    <Button
        android:id="@+id/add_to_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_to_favourite"
        android:textAlignment="center"
        android:textColor="#F9EFF2F3"
        android:background="@color/colorPrimary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/movie_release_date"
        app:layout_constraintBottom_toBottomOf="@+id/movie_poster" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>